--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(AcceleratedCPP VERSION 0.1.0)
+project(coding_problems VERSION 0.1.0)
 
 if (NOT WIN32)
     set(CMAKE_EXECUTABLE_SUFFIX_CXX ".out" CACHE STRING "" FORCE)
