--- a/pe/CMakeLists.txt
+++ b/pe/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(pe 018.cpp)
-target_include_directories(pe PUBLIC ../inc)
+add_executable(pe 020.cpp)
+#target_include_directories(pe PUBLIC ../inc)
