add numerical functions, separate in namespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,10 @@
         "xutility": "cpp",
         "algorithm": "cpp",
         "vector": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "xmemory": "cpp",
+        "string": "cpp",
+        "numeric": "cpp"
     }
 
 }
