--- a/pe/CMakeLists.txt
+++ b/pe/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_executable(pe 024.cpp)
-#target_include_directories(pe PUBLIC ../inc)
+add_executable(pe 026.cpp)
+
+target_include_directories(pe PUBLIC ../inc)
